# StoryCapture

./: .gitignore  02-05-2026-export-video-fix-plan.md  2026-05-02-post-production-preview-zoom-plan.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  design-qa.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
.cargo/: config.toml
apps/desktop/native/macos-recording-v3/: CMakeLists.txt
apps/desktop/native/macos-shared-texture-probe/: CMakeLists.txt  fixture.html
apps/desktop/native/windows-capture/: CMakeLists.txt  build.ps1  helper.manifest  verify-package.ps1
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: author_driver.rs  error.rs  ipc_spec.rs  lib.rs  logging.rs  main.rs  media_probe.rs  panic_hook.rs  state.rs  title_hints.rs
apps/desktop/src-tauri/tests/: author_driver_concurrency.rs  author_driver_picker_pause_resume.rs  author_driver_simulator_lifecycle.rs  author_driver_state_machine.rs  key_no_leak_tests.rs  nl_command_tests.rs  picker_stamp_idempotent_source_bytes.rs  record_path_self_heal_false.rs  replay_navigate_verbs.rs  simulator_retention.rs  simulator_step_to_reuse.rs
crates/automation/: Cargo.toml
crates/automation/src/: action_timeline.rs  auto_wait.rs  capability.rs  chromiumoxide_driver.rs  control.rs  driver.rs  error.rs  events.rs  executor.rs  lib.rs  noop_driver.rs  pacing.rs  playwright_driver.rs  selector.rs  session.rs  targets_store.rs
crates/automation/tests/: capability_routing.rs  executor.rs  pacing.rs  preview_notification.rs  selector.rs  self_healing.rs  simulator_run_to_step.rs  tier1_e2e.rs
crates/automation/tests/fixtures/: self_healing.html  self_healing.story  self_healing.story.targets.json  tier1.html  tier1.story
crates/capture/: Cargo.toml
crates/capture/benches/: windows_cpu_crop.rs
crates/capture/src/: backend.rs  clock.rs  display.rs  error.rs  events.rs  frame.rs  lib.rs  orchestrator.rs  pipeline.rs  queue.rs  target.rs  thumbnail.rs  trajectory.rs  window.rs
crates/capture/src/audio/: config.rs  device.rs  error.rs  fifo.rs  mod.rs  stream.rs
crates/capture/src/fallback/: mod.rs  xcap_backend.rs
crates/capture/src/macos/: cursor.rs  frame_from_sample.rs  mod.rs  raii.rs  sck_backend.rs  screenshot.rs  tcc.rs  window.rs
crates/capture/src/windows/: cursor.rs  frame_from_wgc.rs  helpers.rs  mod.rs  pool.rs  raii.rs  thumbnail.rs  wgc_backend.rs  window.rs
crates/capture/tests/: audio_stream_smoke.rs  find_window_by_pid.rs  pipeline.rs  queue.rs  sck_real_capture.rs  soak.rs  wgc_real_capture.rs  window_enumeration.rs  windows_real_capture_e2e.rs
crates/effects/: Cargo.toml
crates/effects/examples/: gen_gradient_presets.rs  generate_cursor_skins.rs
crates/effects/src/: error.rs  lib.rs
crates/effects/src/ast/: audio.rs  mod.rs  types.rs  video.rs
crates/effects/src/audio/: bgm.rs  click_sfx.rs  ducking.rs  library.rs  mixer.rs  mod.rs
crates/effects/src/background/: compositor.rs  gradients.rs  mod.rs  rounded_frame.rs  shadow.rs
crates/effects/src/builder/: mod.rs  order.rs
crates/effects/src/cursor/: compositor.rs  mod.rs  png_sequence.rs  ripple.rs  skins.rs  trajectory.rs
crates/effects/src/emit/: ffmpeg.rs  mod.rs  preview.rs
crates/effects/src/math/: ease.rs  lowpass.rs  min_jerk.rs  mod.rs  perlin.rs  spring.rs  vec2.rs
crates/effects/src/text/: animation.rs  auto_annotate.rs  callout.rs  drawtext.rs  fonts.rs  highlight_ring.rs  mod.rs
crates/effects/src/transitions/: mod.rs  opencl_probe.rs  timeline.rs  xfade.rs
crates/effects/src/zoom/: cluster.rs  keyframe_builder.rs  mod.rs  planner.rs  presets.rs  waypoint_source.rs
crates/effects/tests/: audio_mix.rs  audio_mixer.rs  audio_rms_check.rs  background.rs  canonical_order.rs  canonical_order_full_stage.rs  cursor_emit.rs  cursor_ripple.rs  cursor_trajectory.rs  full_scene.rs  math_min_jerk.rs  math_spring.rs  minimal_scene.rs  preview_render_parity.rs  sound_library.rs  text_overlay.rs  transitions.rs  zoom_emit.rs  zoom_planner.rs
crates/effects/tests/fixtures/: audio_mix.filter_complex.snap  audio_mixer.filter_complex.snap  background_gradient.filter_complex.snap  cursor_overlay.filter_complex.snap  full_scene.filter_complex.snap  minimal_scene.filter_complex.snap  text_overlay.filter_complex.snap  transitions_chained.filter_complex.snap  zoom_calm.filter_complex.snap  (+2 more)
crates/encoder/: Cargo.toml
crates/encoder/src/: config.rs  error.rs  filters.rs  lib.rs  pipeline.rs  probe.rs  progress.rs  quality.rs  sidecar.rs  staging.rs
crates/encoder/tests/: export_integration.rs  fanout_intermediate.rs  graceful_shutdown_smoke.rs  pipeline.rs  probe.rs  psnr_regression.rs  queue_actor.rs  resolution_lock_real_ffmpeg.rs  vt_writer_macos.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: error.rs  http.rs  lib.rs  secrets.rs
crates/intelligence/tests/: anthropic_stream_tests.rs  dryrun_orchestrator_tests.rs  elevenlabs_tests.rs  eval_golden_dataset.rs  lsp_bridge_tests.rs  lsp_server_tests.rs  nl_orchestrator_tests.rs  openai_stream_tests.rs  openai_tts_tests.rs  redaction_tests.rs  selector_lint_tests.rs  tts_script_tests.rs  tts_sync_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: app_db.rs  error.rs  lib.rs  models.rs  phase3.rs  preset_io.rs  project_db.rs  project_folder.rs
crates/storage/tests/: app_db.rs  migrations.rs  migrations_v2.rs  phase3_migration_tests.rs  preset_roundtrip.rs  project_db.rs  roundtrip.rs
crates/story-parser/: Cargo.toml
crates/story-parser/src/: ast.rs  diagnostic.rs  formatter.rs  grammar.pest  io.rs  lenient_tokenize.rs  lib.rs  parser.rs  recover.rs  semantic.rs  suggest.rs
crates/story-parser/tests/: errors.rs  golden.rs  nth_modifier.rs  round_trip.rs  step_ids.rs
tools/e2e-playwright-capture/: Cargo.toml  README.md
tools/e2e-playwright-capture/src/: main.rs
(+1526 files in other folders)
