[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/story-parser",
  "crates/automation",
  "crates/capture",
  "crates/effects",
  "crates/encoder",
  "crates/storage",
  "crates/intelligence",
  "tools/e2e-playwright-capture",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["StoryCapture Contributors"]
repository = "https://github.com/storycapture/storycapture"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "time", "io-util", "fs", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Concurrency primitives
parking_lot = "0.12"

# Platform-gated native deps. Per-crate Cargo.toml files opt-in via
# `[target.'cfg(target_os = "macos")'.dependencies]` and friends; features are
# selected per-crate so this workspace block stays minimal.
objc2 = { version = "0.5" }
windows = { version = "0.58" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
