[package]
name = "automation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BrowserDriver trait + Playwright sidecar driver (pure crate, no Tauri deps)."

[lib]

[dependencies]
# Async runtime + utilities
tokio = { workspace = true }
async-trait = "0.1"

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Errors / observability
thiserror = { workspace = true }
tracing = { workspace = true }

# IDs (UUID v7 step ids passed through to storage)
uuid = { workspace = true }

# URL handling for navigate / base-url joining
url = "2"

# Plan 07-05 — author-time DOM validator. Parses the snapshot HTML string
# detached (no browser) to run deterministic locator strategies against the
# cached DOM. Kept inside the automation crate so desktop callers only see
# the typed `SmartSelector::validate_against_dom` surface.
scraper = "0.20"

# Pure-crate intra-workspace deps (zero Tauri).
story-parser = { path = "../story-parser" }
storage = { path = "../storage" }

# Atomic file writes for the targets sidecar (write-to-temp + persist).
tempfile = "3"

[features]
default = []
# Gate Node-process tests behind this so CI doesn't need Node + playwright-core.
real-playwright-tests = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
