[package]
name = "capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform-native screen capture (ScreenCaptureKit / Windows.Graphics.Capture / xcap fallback). Phase 1 plan 01-07 — CAP-01..CAP-07."

[lib]

[dependencies]
async-trait = "0.1.89"
tokio = { workspace = true }
serde = { workspace = true }
util = { path = "../util" }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
xcap = "0.9.4"
# Plan 06-03 Task 1 — PNG encoding for the `capture_thumbnail` API
# (SCScreenshotManager rgba_data → PNG bytes). Only default-features
# off + "png" keeps the bloat under 200 KB. Already transitively pulled
# in by xcap 0.9, so we just surface it.
image = { version = "0.25.10", default-features = false, features = ["png"] }

# Phase 6 plan 01 — mic audio capture.
# cpal 0.17.3 is the current published line (2026-02-18). The 0.16→0.17
# bump changed build_input_stream to take StreamConfig by value — see
# Pattern 1 in 06-RESEARCH.md.
# ringbuf 0.4.8 is the SPSC workaround for cpal#970 (no cross-thread
# sends inside the cpal callback on Windows WASAPI).
# rubato is pinned but currently unused — kept as a future SRC hook
# per RESEARCH Out-of-scope note.
cpal = "=0.17.3"
ringbuf = "=0.4.8"
rubato = "0.16"
bytemuck = "1.25.0"
# tempfile was a dev-dep before Phase 6; promoted to a runtime dep because
# `audio::fifo::make_fifo` uses tempdir() to create the owner-only
# parent directory for the mkfifo target (T-06-06 mitigation).
tempfile = "3.27.0"
# Unique-per-session suffix for Windows named-pipe paths (fifo.rs).
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs"] }

# Optional — pulled in only by the `real-capture` feature for the
# 30-min memory soak (CAP-05). Default builds don't depend on sysinfo.
sysinfo = { version = "0.32", optional = true }

# Platform-gated native deps (D-16 / D-17). Versions pinned to the
# highest published 1.x stable on crates.io as of 2026-04-15.
#
# Plan 01-07 specifies `screencapturekit = "=1.70.0"` and
# `windows-capture = "=1.5.0"` per CONTEXT.md decisions; those exact
# versions are not on crates.io (the doom-fish crate's published
# 1.x line caps at 1.5.4; windows-capture's 1.x line caps at 1.5.0
# on its own track but the registry's `windows-capture` is at 2.0.0).
# Per Rule 3 (blocking dep), pinned to the closest published versions.
# See SUMMARY for the full deviation note.
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "=1.5.4"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
core-foundation = "0.10.1"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "=2.0.0"
# NOTE: windows-capture 2.0.0 pulls windows 0.62 transitively; we keep a
# 0.58 dep pinned here for our own uses (EnumWindows + GetWindowThreadProcessId
# fallbacks, ToolHelp snapshot walk for Chromium child-process resolution).
# Two versions of `windows` in the graph is benign — our code only imports
# the 0.58 one directly.
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_System_Performance",
    "Graphics_Capture",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    # Phase 6 plan 01 — audio named pipe factory (fifo.rs).
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[features]
default = []
# Real-capture integration tests (incl. 30-min CI soak). Off by default
# because they require Screen Recording / a display; CI flips them on.
real-capture = ["dep:sysinfo"]
# Plan 05-03 Windows real-capture integration tests. Off by default —
# requires a graphical Windows session + notepad.exe + Playwright sidecar.
# Operator-triggered on a Windows VM (not in PR CI).
real-capture-windows = []
# Phase 06 plan 01 — synthetic 1 kHz sine wave injection for the
# audio pipeline. Bypasses cpal's hardware enumeration so tests can run
# on CI hosts without a mic, and makes fixture-driven unit tests
# hardware-free.
audio-mock = []

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1"
# Plan 06-04 Windows E2E tests: encode captured frames via sibling FFmpeg
# and probe the result with ffprobe. `which` resolves both binaries from
# PATH on the operator machine or the self-hosted runner.
anyhow = "1"
which = "7"
# Plan 06-02 — bench gate for Windows post-capture CPU crop (<5ms per
# 1080p BGRA frame on reference hardware). Criterion 0.5 is the current
# stable line per the project's dev stack in CLAUDE.md.
criterion = "0.5"

[[bench]]
name = "windows_cpu_crop"
harness = false
# Only builds on Windows; the helpers live under
# `crates/capture/src/windows/frame_from_wgc.rs` which is
# `#![cfg(target_os = "windows")]`. The bench file itself also cfg-gates.
