[package]
name = "effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indexmap = "2.5"
ts-rs = { version = "10", optional = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

[features]
default = ["ts-export", "sqlite"]
ts-export = ["dep:ts-rs"]
sqlite = ["dep:rusqlite"]

[dev-dependencies]
insta = "1.40"
