[package]
name = "effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indexmap = "2.14.0"
ts-rs = { version = "12.0.1", optional = true }
rusqlite = { version = "0.39", features = ["bundled"], optional = true }
image = { version = "0.25.10", default-features = false, features = ["png"] }
rayon = "1.12.0"

[features]
default = ["ts-export", "sqlite"]
ts-export = ["dep:ts-rs"]
sqlite = ["dep:rusqlite"]

[dev-dependencies]
insta = "1.47.2"
tempfile = "3.27.0"
