[package]
name = "encoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFmpeg sidecar encoder. Pure crate — sidecar command injected by Tauri host (Plan 01-08)."

[lib]

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = "1"
capture = { path = "../capture" }
effects = { path = "../effects" }
storage = { path = "../storage" }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { workspace = true }
futures = "0.3"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# Tests that spawn a real FFmpeg binary are gated behind this feature. CI
# enables it only after the `ffmpeg-build.yml` artifact is downloaded into
# `scripts/build-ffmpeg/out/ffmpeg-<triple>`.
real-ffmpeg = []

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
tokio-util = "0.7"
rusqlite = { version = "0.34", features = ["bundled"] }
