[package]
name = "encoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFmpeg sidecar encoder. Pure crate — sidecar command injected by Tauri host (Plan 01-08)."

[lib]

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = "1"
capture = { path = "../capture" }
effects = { path = "../effects" }
storage = { path = "../storage" }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { workspace = true }
futures = "0.3"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS-only: AVAssetWriter fast path (VtWriter) for zero-copy encode from
# CVPixelBuffer handles delivered by the SCK backend. See
# `src/macos/vt_writer.rs`. These crates pull in objc2 0.6.x transitively;
# the `capture` crate still uses objc2 0.5 — two versions coexist benignly
# because the FFI types we touch are CF types (pointer-stable ABI).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDictionary", "NSURL", "NSError", "NSArray", "NSValue", "NSObject"] }
objc2-av-foundation = { version = "0.3", features = ["AVAssetWriter", "AVAssetWriterInput", "AVMediaFormat", "AVVideoSettings", "objc2-core-media", "objc2-core-video"] }
objc2-core-media = { version = "0.3", features = ["CMTime"] }
objc2-core-video = { version = "0.3", features = ["CVBuffer", "CVImageBuffer", "CVPixelBuffer"] }

[features]
default = []
# Tests that spawn a real FFmpeg binary are gated behind this feature. CI
# enables it only after the `ffmpeg-build.yml` artifact is downloaded into
# `scripts/build-ffmpeg/out/ffmpeg-<triple>`.
real-ffmpeg = []

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
tokio-util = "0.7"
rusqlite = { version = "0.34", features = ["bundled"] }
