[package]
name = "intelligence"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
# When crates/automation is available, enable this to switch from the local
# trait stub to the real Phase-1 BrowserDriver.
phase1-wired = []

[dependencies]
# HTTP + SSE
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
eventsource-stream = "0.2"
bytes              = "1"

# Async
tokio        = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-trait  = "0.1"

# Serde + JSON Schema
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
schemars   = { version = "0.8", features = ["preserve_order"] }

# LSP
tower-lsp = "0.20"
tower      = "0.4"
dashmap   = "6"
ropey     = "1.6"

# Errors + tracing
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Redaction pattern matching
regex = "1"

# Util
uuid     = { version = "1", features = ["v4", "v7"] }
sha2     = "0.10"
rand     = "0.8"
httpdate = "1"

# Workspace siblings
story-parser = { path = "../story-parser" }

[dev-dependencies]
tokio    = { version = "1.40", features = ["test-util", "macros", "rt-multi-thread"] }
insta    = { version = "1", features = ["json"] }
tempfile = "3"
wiremock = "0.6"
serde_yaml = "0.9"
