[package]
name = "intelligence"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
# When crates/automation is available, enable this to switch from the local
# trait stub to the real Phase-1 BrowserDriver.
phase1-wired = []

[dependencies]
# HTTP + SSE
reqwest            = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "gzip"] }
eventsource-stream = "0.2.3"
bytes              = "1.11.1"

# Async
tokio        = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
async-trait  = "0.1.89"

# Serde + JSON Schema
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars   = { version = "0.8", features = ["preserve_order"] }

# LSP
tower-lsp = "0.20.0"
tower      = "0.5"
dashmap   = "6.1.0"
ropey     = "1.6.1"

# Errors + tracing
thiserror          = "2.0.18"
anyhow             = "1.0.102"
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

# Redaction pattern matching
regex = "1.12.3"

# Util
uuid     = { version = "1.23.1", features = ["v4", "v7"] }
sha2     = "0.11"
hex      = "0.4.3"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3"] }
rand     = "0.8"
httpdate = "1.0.3"

# Config parsing (eval_report binary)
toml = "0.8"

# Workspace siblings
story-parser = { path = "../story-parser" }
util         = { path = "../util" }

[[bin]]
name = "eval_report"
path = "src/bin/eval_report.rs"

[dev-dependencies]
tokio    = { version = "1.52", features = ["test-util", "macros", "rt-multi-thread"] }
insta    = { version = "1.47.2", features = ["json"] }
tempfile = "3.27.0"
wiremock = "0.6.5"
serde_yaml = "0.9"
