[package]
name = "storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "time", "uuid"] }
rusqlite_migration = "2.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
tracing = { workspace = true }
slug = "0.1.6"

[dev-dependencies]
tempfile = "3.27.0"
story-parser = { path = "../story-parser", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
