[package]
name = "story-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]

[dependencies]
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strsim = "0.11.1"
uuid = { version = "1.23.1", features = ["v4", "v7", "serde"] }
specta = { version = "2.0.0-rc.22", features = ["derive"], optional = true }
ts-rs = { version = "10", optional = true }

[features]
default = ["ts-export"]
ts-export = ["dep:ts-rs"]
specta-types = ["dep:specta"]

[dev-dependencies]
insta = "1.47.2"
proptest = "1.11.0"
