[package]
name = "storycapture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "storycapture"
description = "StoryCapture desktop host (Tauri v2). Phase 1 plan 01-03 — thin host: plugins, typed IPC, error taxonomy, logging, panic hook, OS keychain."

[lib]
name = "storycapture"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "storycapture"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Backlog #9: build.rs codegen for browser_presets.rs from shared-types JSON.
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# Tauri core + plugins (D-context Claude's Discretion list, see CONTEXT.md)
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4"
tauri-plugin-os = "2"

# Typed IPC codegen (D-05)
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"

# Errors (D-31)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serde (IPC payloads)
serde = { workspace = true }
serde_json = { workspace = true }

# Logging / tracing (D-30)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
tracing-log = "0.2"
log = "0.4"

# Async runtime
tokio = { workspace = true }

# IDs
uuid = { workspace = true }

# OS keychain (D-29 — keyring crate, NOT Stronghold).
# tauri-plugin-keyring is a community plugin and not all releases are on
# crates.io; the `keyring` crate is the established Rust binding to all
# three platform keychains (macOS Keychain, Windows Credential Manager,
# Linux Secret Service) and satisfies D-29 directly. We expose it through
# a local `commands::system` smoke API rather than as a separate plugin.
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# OnceCell for storing the AppHandle inside the panic hook
once_cell = "1"

# Workspace crates (Plan 01-06 wires automation; Plan 01-05 storage already
# in workspace; downstream plans add capture / encoder / story-parser).
automation = { path = "../../../crates/automation" }
capture = { path = "../../../crates/capture" }
encoder = { path = "../../../crates/encoder" }
effects = { path = "../../../crates/effects" }
story-parser = { path = "../../../crates/story-parser" }
storage = { path = "../../../crates/storage" }
intelligence = { path = "../../../crates/intelligence" }
util = { path = "../../../crates/util" }
parking_lot = { workspace = true }
async-trait = "0.1"
# Phase 03 plan 07: rusqlite for nl_conversations query in persist_turn helper.
rusqlite = { version = "0.34", features = ["bundled"] }

# Phase 04 plan 03: timestamp formatting for web account connected_at.
time = { version = "0.3", features = ["formatting"] }

# Phase 03 plan 03: provider probe HTTPS client (rustls only — no native-tls,
# no plaintext HTTP). `json` parses error bodies for safe `detail` strings.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Plan 06-02: validate meta.app before forwarding as Chromium --app= arg
# (T-06-09 — reject javascript:/data: schemes).
url = "2"

# Plan 07-05: author-time snapshot store hashing + base64 PNG decoding.
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# macOS-only: set the Dock icon at runtime so `tauri dev` (which runs
# the raw binary without an .app bundle) shows the StoryCapture icon
# instead of the generic executable glyph.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSImage",
    "NSResponder",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.2", features = [
    "NSData",
    "NSThread",
    "NSString",
    "NSGeometry",
] }

[dev-dependencies]
# Phase 03 plan 03: mock HTTP server for `key_test` leak-proof integration tests.
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
# Plan 07-05: tempdir fixtures for author_snapshot store tests.
tempfile = "3"
